--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -26,7 +26,9 @@
                             </p>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/logout">Logout</a>
+                            <form action="/logout" method="post" class="d-inline">
+                                <button type="submit" class="nav-link btn btn-link p-0">Logout</button>
+                            </form>
                         </li>
                         <% }; %>
             </ul>
