--- a/views/animals.ejs
+++ b/views/animals.ejs
@@ -63,7 +63,7 @@
               <%=animal.Size%>
             </span>
             <span class="col py-1 bg-light">
-              to calculate from database
+              <%=animal.Age%>
             </span>
             <span class="col py-1 bg-light">
               <%=animal.Adopted%>
