--- a/views/species.ejs
+++ b/views/species.ejs
@@ -13,22 +13,26 @@
     <div class="container-fluid mt-5">
       <h2 class="p-3 text-center">Animals for Adoption - species</h2>
         <div class="list-group">
+
+          <!-- Table header -->
           <div class="row px-3 py-1 w-100">
             <span class="col py-1 bg-noroff">Id</span>
             <span class="col py-1 bg-noroff">Name</span>
             <span class="col py-1 bg-noroff">Options</span>
           </div>
+          
+          <!-- Table body for list of species -->
           <% species.forEach(function(species) { %>
             <div class="row px-3 py-1 w-100">
               <span class="col py-1 bg-light">
-                <%=species.Id%>
+                <%=species.id%>
               </span>
               <span class="col py-1 bg-light">
-                <%=species.Name%>
+                <%=species.name%>
               </span>
               <span class="col py-1 bg-light text-center">
-                <button class="btn-sm btn-warning" onclick="updateSpecies( <%=species.Id%>)">Update species</button>
-                <button class="btn-sm btn-danger" onclick="deleteSpecies( <%=species.Id%>)">Delete species</button>
+            <button class="btn-sm btn-warning" onclick="updateSpecies(<%=species.id%>, '<%=species.name%>')">Update species</button>
+            <button class="btn-sm btn-danger" onclick="deleteSpecies( <%=species.id%>)">Delete species</button>
               </span>
             </div>
             <% }); %>
@@ -36,8 +40,9 @@
             <div class="row">
               <div class="col-4"></div>
               <div class="col-4 text-center mt-2">
-                <form action="/species/add" method="POST">
-                  <button class="btn btn-success" id="btn-add-animal">Add New Species</button>
+                <form action="/species/add" method="POST" class="d-flex gap-2">
+                  <input type="text" name="name" class="form-control" placeholder="New species name" required>
+                  <button type="submit" class="btn btn-success">Add</button>
                 </form>
               </div>
               <div class="col-4"></div>
