--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-  <div class="container-fluid mt-5 text-center">
+  <body>
+  <%- include('./partials/navbar.ejs', {user: user}) %>
+    <div class="container-fluid mt-5 text-center">
       <h1>
         DAB - Adopt an Animal Course Assignment
       </h1>
